kubernetes/01-config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: lab
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: lab.com
    - http:
        paths:
          - path: /postgres(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: postgres-service
                port:
                  number: 31522
          - path: /pgadmin(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 30200
